--- a/app/stylesheets/style.less
+++ b/app/stylesheets/style.less
@@ -60,8 +60,8 @@
     -webkit-align-items: center;
   }
 }
-#nav-add-bar {
-  width: 300px;
+.nav-bar-search {
+  width: 300px !important;
 }
 
 #player-progress-instance {
